# rustr

./: .gitignore  Cargo.toml  README.md  cargo_check.json  config.json
images/: 2  3
locales/: en.ftl  ja.ftl
src/: cache_db.rs  emoji_loader.rs  localization.rs  main.rs  nip49.rs  nostr_client.rs  theme.rs  types.rs  ui.rs
src/ui/: events.rs  home_view.rs  image_cache.rs  login_view.rs  notifications_view.rs  post.rs  profile_view.rs  relays_view.rs  search_view.rs  settings_view.rs  wallet_view.rs  zap.rs
