[package]
name = "nostr-nip38-status-sender"
version = "0.1.0"
edition = "2024"

[dependencies]
nostr = "0.30"
nostr-sdk = "0.30"
nostr-types = "0.4.0" # ここを "0.4.0" に修正してください
tokio = { version = "1", features = ["full"] }
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.21"
hex = "0.4"
pbkdf2 = "0.12"
hmac = "0.12.1"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "2.0"
thiserror = "1.0"
dirs = "5.0"
eframe = "0.32.0" # eframeのバージョンを0.32.0に更新
epaint = "0.32.0" # epaintもeguiと同じ0.32.0に更新
egui = "0.32.0"   # これは既存のバージョン
env_logger = "0.10"

